# hello-rust

./: Cargo.toml  README.md  docker-compose.yaml  justfile
.http/: todos.http
client/: todos.http
docs/: openapi.yaml
src/: main.rs  openapi.rs  todo.rs
